--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,10 @@ h2 {
   padding-bottom: 20px;
 }
 
+h5 {
+  margin-top: 20px;
+}
+
 div {
   padding-bottom: 20px;
 }
@@ -68,9 +72,12 @@ div {
   margin-bottom: 28px;
 }
 
-.memo-divider-network {
-  margin-top: 28px;
-  margin-bottom: 0px;
+.network-divider {
+  margin-top: 6px;
+  margin-bottom: 48px;
+  border: solid;
+  height: 5px;
+  color: #00E5FF;
 }
 
 .bold-name {
@@ -82,6 +89,14 @@ div {
   width: 48px;
   height: 48px;
   border-radius: 50%;
+}
+
+.img-profileShow {
+  object-fit: cover;
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  margin-bottom: 20px;
 }
 
 .memo-img {
@@ -129,4 +144,8 @@ a {
 
 .text-secondary {
   color: #00E5FF !important;
+}
+
+#profileTitle {
+  padding-bottom: 0px;
 }
