--- a/views/memos/index.ejs
+++ b/views/memos/index.ejs
@@ -35,17 +35,17 @@
     }
     </script>
 
-        <% if (totalPages > 1) { %>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    <% for(let i = 1; i <= totalPages; i++) { %>
-                    <li class="page-item <%= i === page ? 'active' : '' %>">
+
+        <nav aria-label="Page-navigation">
+            <ul class="pagination justify-content-center">
+                <% for(let i = 1; i <= totalPages; i++) { %>
+                    <li class="page-item <%= i === currentPage ? 'active' : '' %>">
                         <a class="page-link" href="/memos?page=<%= i %>"><%= i %></a>
                     </li>
-                    <% } %>
-                </ul>
-            </nav>
-        <% } %>
+                <% } %>
+            </ul>
+        </nav>
+        
 
     </div>
     </div>
