--- a/views/networks/show.ejs
+++ b/views/networks/show.ejs
@@ -53,15 +53,16 @@
     }
 </script>
 
-<nav aria-label="Page navigation example">
-    <ul class="pagination">
+<nav aria-label="Page-navigation">
+    <ul class="pagination justify-content-center">
         <% for(let i = 1; i <= totalPages; i++) { %>
-        <li class="page-item <%= i === currentPage ? 'active' : '' %>">
-            <a class="page-link" href="/networks/<%= n._id %>?page=<%= i %>"><%= i %></a>
-        </li>
+            <li class="page-item <%= i === currentPage ? 'active' : '' %>">
+                <a class="page-link" href="/networks/<%= n._id %>?page=<%= i %>"><%= i %></a>
+            </li>
         <% } %>
     </ul>
 </nav>
+
 
     </div>
     </div>
