--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,41 +16,33 @@
     <div class="row">
     <div class="offset-md-3 col-md-6 ps-0 pe-0">
 
-    <nav class="navbar navbar-expand-md" style="background-color: white;">
-
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/memos/new"><h1>SCLE</h1></a>
-
-          <button class="navbar-toggler mb-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-
-            <ul class="navbar-nav text-end">
-              <li class="nav-item mt-2">
-                <a class="nav-link" aria-current="page" href="/memos/new"><img src="/images/icon-add.png" alt="add memo"></a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" href="/memos"><img src="/images/icon-pin.png" alt="view all memos"></a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" href="/networks"><img src="/images/icon-person-pin.png" alt="view all contacts"></a>
-              </li>
-              <li class="nav-item mt-2">
-                <% if (user) { %>
-                    <a class="nav-link" href="/logout"><img src="/images/icon-logout.png" alt="logout" id="nav-icon"></a>
-                <% } else { %>
-                    <a class="nav-link" href="/auth/google" class="login"><img src="/images/icon-login.png" alt="login" id="nav-icon"></a>
-                <% } %>
-              </li>
-            </ul>
-
-          </div>
-        </div>
-
-    </nav>
-    
+        <nav class="navbar navbar-expand-md navbar-custom" style="background-color: white;">
+            <div class="container-fluid">
+                <a class="navbar-brand mt-2" href="/memos/new"><h1>SCLE</h1></a>
+                <ul class="navbar-nav ms-auto mb-1">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/memos/new"><img src="/images/icon-add.png" alt="add memo"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/memos"><img src="/images/icon-pin.png" alt="view all memos"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/networks/new"><img src="/images/icon-add-contact.png" alt="add new contact"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/networks"><img src="/images/icon-person-pin.png" alt="view all contacts"></a>
+                    </li>
+                    <li class="nav-item">
+                        <% if (user) { %>
+                            <a class="nav-link" href="/logout"><img src="/images/icon-logout.png" alt="logout"></a>
+                        <% } else { %>
+                            <a class="nav-link" href="/auth/google"><img src="/images/icon-login.png" alt="login"></a>
+                        <% } %>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        
     </div>
     </div>
 
