--- a/views/networks/index.ejs
+++ b/views/networks/index.ejs
@@ -4,16 +4,12 @@
     <div class="row">
     <div class="offset-md-3 col-md-6 ps-0 pe-0">
 
-        <section class="d-flex justify-content-between align-items-start">
-            <h2>CONTACTS</h2>
-            <a href="/networks/new" ><img src="/images/icon-add-contact.png" alt="add contact" class="iconButton"></a>
-        </section>
-
+        <h2>CONTACTS</h2>
 
         <% networks.forEach(function(n) { %>
             <div class="float-start me-3">
                 <% if (n.image && n.image !== 'defaultImageURLHere') { %>
-                    <img src="<%= n.image %>" alt="uploaded image" class="img-fluid img-profile">
+                    <img src="<%= n.image %>" alt="uploaded image" onclick="showImageModal(this.src);" loading="lazy" class="img-fluid img-profile">
                 <% } %>
             </div>
 
@@ -36,14 +32,65 @@
         </div>
         <% }); %>
 
+        <nav aria-label="Page-navigation" class="d-flex justify-content-center align-items-center">
+            <div class="d-flex flex-row justify-content-center align-items-center">
+                <!-- Pagination Controls -->
+                <div>
+                    <ul class="pagination mb-0">
+                        <% for(let i = 1; i <= totalPages; i++) { %>
+                            <li class="page-item <%= i === currentPage ? 'active' : '' %>">
+                                <a class="page-link" href="/networks?page=<%= i %>"><%= i %></a>
+                            </li>
+                        <% } %>
+                    </ul>
+                </div>
+                <!-- Back to Top Button -->
+                <div class="ms-2">
+                    <button onclick="scrollToTop()" class="btn btn-outline-secondary">Back to Top</button>
+                </div>
+            </div>
+        </nav>
+        
+        
+
     </div>
     </div>
 </div>
 
+<!-- Bootstrap image modal -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="imageModalLabel">Image View</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img src="" id="modalImage" class="img-fluid" alt="Responsive image">
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
-function confirmDelete() {
-    return confirm('Are you sure you want to delete?');
-}
+    function showImageModal(src) {
+      document.getElementById('modalImage').src = src;
+      
+      var imageModal = new bootstrap.Modal(document.getElementById('imageModal'));
+      imageModal.show();
+    }
+</script>
+
+<script>
+    function confirmDelete() {
+        return confirm('Are you sure you want to delete?');
+    }
+</script>
+
+<script>
+    function scrollToTop() {
+        window.scrollTo({top: 0, behavior: 'smooth'});
+    }
 </script>
 
 <%- include('../partials/footer') %>
