Working. Updated memo/index name to link to name/show. On name/show, click will take you back to previous page (browser history)

--- a/views/networks/show.ejs
+++ b/views/networks/show.ejs
@@ -10,7 +10,7 @@
         <% } else { %>
             <img src="/images/default-profile-image.png" alt="Default Profile Image" style="max-width: 64px; height: auto;">
         <% } %>
-        <a href="/networks" ><img src="/images/icon-back.png" alt="back to view all contacts" class="iconButton"></a>
+        <a href="#" onclick="window.history.back(); return false;"><img src="/images/icon-back.png" alt="back to last page" class="iconButton"></a>
     </section>
     
     <section>
