--- a/views/networks/show.ejs
+++ b/views/networks/show.ejs
@@ -10,7 +10,7 @@
         <% } else { %>
             <img src="/images/default-profile-image.png" alt="Default Profile Image" style="max-width: 64px; height: auto;">
         <% } %>
-        <a href="#" onclick="window.history.back(); return false;"><img src="/images/icon-back.png" alt="back to last page" class="iconButton"></a>
+        <a href="#" class="btn btn-link" onclick="window.history.back(); return false;">Back</a>
     </section>
     
     <section>
