Fix bug to handle deleted contacts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <div class="offset-md-3 col-md-6 ps-0 pe-0">
 
         <div>
-            <h2>Recalling details from conversations can be hard.</h2>
+            <h2>Remembering details from conversations is hard.</h2>
             <h2>Let's fix that.</h2>
         </div>
 
@@ -13,8 +13,16 @@
             <% if (user) { %>
             <a href="/logout" class="btn btn-outline-primary btn-lg" role="button">Log out</a>
             <% } else { %>
-            <a href="/auth/google" class="btn btn-lg btn-outline-primary" role="button">Log in with Google</a>
+            <a href="/auth/google" class="btn btn-lg btn-outline-primary mb-5" role="button">Log in with Google</a>
             <% } %>
+        </div>
+
+        <div>
+            <p>SOCIAL <br> 
+                COGNITIVE <br> 
+                LIMIT <br> 
+                EXPANDER</p>
+            <p>SCLE enhances our capacity to build and maintain meaningful relationships by helping us recall important details for future interactions.</p>
         </div>
 
     </div>        
