Landing page blurb update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         </div>
 
         <div>
-            <p>SOCIAL <br> 
+            <p style="font-weight: 500; line-height: 1.4rem;">SOCIAL <br> 
                 COGNITIVE <br> 
                 LIMIT <br> 
                 EXPANDER</p>
