--- a/views/networks/edit.ejs
+++ b/views/networks/edit.ejs
@@ -38,6 +38,7 @@
     </div>
 </div>
 
+<!-- Loading spinner -->
 <script>
     document.querySelector('.memoForm').addEventListener('submit', function() {
     document.getElementById('spinner').style.display = 'block';
