Working. Home page styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
             <% } %>
         </div>
 
-        <div>
+        <div class="col-md-8">
             <p style="font-weight: 500; line-height: 1.4rem;">SOCIAL <br> 
                 COGNITIVE <br> 
                 LIMIT <br> 
