Updated functionality of deleting a contact - it also deletes all memos related to the contact. Updated confirmation modal to reflect this

--- a/views/networks/show.ejs
+++ b/views/networks/show.ejs
@@ -118,7 +118,7 @@
 <!-- Delete confirmation modal -->
 <script>
     function confirmDelete() {
-        return confirm('Are you sure you want to delete?');
+        return confirm('This will delete the contact and all memos related to this contact. Do you wish to continue?');
     }
 </script>
 
